--- a/wireframe.html
+++ b/wireframe.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Here we have the home page of our wonderful site to find information about weather here and wherever we are!">
+    <meta name="description" content="Here we will have a Wireframe!">
     <link rel="shortcut icon" href="img/favicon(1).ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
-    <link rel="stylesheet" href="css/large.css">
-
-    <title>Here is the Home page.</title>
+    
+    <title>Here is the Wireframe</title>
     </head> 
     <body onload="getUpdate(), pancakeD()">
         <div class="container1">
